@@ -670,7 +670,7 @@ public class Settings {
 				o = constructor.newInstance(args);
 			}
 			else { // call empty constructor
-				o = objClass.newInstance();
+				o = objClass.getDeclaredConstructor().newInstance();
 			}
 		} catch (SecurityException e) {
 			e.printStackTrace();
